--- a/day 7/ReadMe
+++ b/day 7/ReadMe
@@ -1,36 +1,33 @@
-# What I Learned Today
+# Day 7 Learning: API Testing and Implementation
 
-1: API Test Automation Practice
+## Overview
+Today I continued my journey exploring API interaction and testing, focusing on:
+- Building a Flask API
+- Creating and testing HTTP requests
+- Using Postman for API testing
+- Beginning API test automation
+
+## 1. API Test Automation Practice
+
 I began exploring API test automation based on FreeCodeCamp materials:
 
-Created a workspace named "FreeCodeCamp - API Test Automation"
-Learned how to extract data from responses, particularly focusing on order_ID
-Practiced writing pre-request and post-request scripts
-Used console.log for debugging API responses
-write t automation scripts
-Learned  about creating forks
-Explored status codes, products, and client-side interaction
-Finished the implementation of order creation and response handling
-I'm still implementing these concepts and will continue tomorrow 
+- Created a workspace named "FreeCodeCamp - API Test Automation"
+- Learned how to extract data from responses, particularly focusing on `order_ID`
+- Practiced writing pre-request and post-request scripts
+- Used `console.log` for debugging API responses
+- Wrote test automation scripts
+- Learned about creating forks
+- Explored status codes, products, and client-side interaction
+- Finished the implementation of order creation and response handling
 
+I also explored the Twilio API from a video tutorial available on Postman.
 
+## 2. Python Requests Library
 
-I also explored Twilio API https  from the first video tutorial that is also on postman with name tiwilio
+I implemented a basic script to interact with the JSONPlaceholder API using Python's requests library:
 
-
-
-
-### Today I continued my journey into API interaction and testing, focusing on:
-
-Building a Flask API
-Creating and testing HTTP requests
-Using Postman for API testing
-### Beginning API test automation
-
-
-1. Python Requests Library
-I began by implementing a basic script to interact with the JSONPlaceholder API using Python's requests library.
-pythonimport requests
+```python
+import requests
 import json
 print("Script is running!")
 
@@ -64,8 +61,10 @@ def simple_request_demo():
 
 if __name__ == "__main__":
     simple_request_demo()
+```
 
-#### output Output:
+### Output:
+```
 Script is running!
 ===== Simple API Request Demo =====
 
@@ -88,14 +87,14 @@ Response body:
   "userId": 1,
   "id": 101
 }
+```
 
+## 3. Flask API Implementation
 
-2:  Flask API Implementation
 I built a custom Flask API to understand server-side API implementation. This API supports CRUD operations for a simple post management system.
-as i am sharing the file where you see the input for get/post/put/delete that i implemented 
-i am sharing the output 
 
-Flask API Server Output:
+### Flask API Server Output:
+```
 Starting Flask API server...
 API available at http://127.0.0.1:5000/
 Available endpoints:
@@ -106,10 +105,15 @@ Available endpoints:
   DELETE /posts/<id>
  * Debugger is active!
  * Debugger PIN: 135-509-750
- * Running on http://127.0.0.1:5000   (you can check the http in my postman too )
+ * Running on http://127.0.0.1:5000
+```
 
-3:  HTTP Requests (flask_api_test.http):
-http### Get all posts
+## 4. HTTP Requests Testing
+
+I created a test file (`flask_api_test.http`) to test the Flask API endpoints:
+
+```http
+### Get all posts
 GET http://127.0.0.1:5000/posts
 
 ### Get a single post
@@ -136,34 +140,50 @@ Content-Type: application/json
 
 ### Delete a post
 DELETE http://127.0.0.1:5000/posts/2
+```
 
+## Challenges Encountered
 
-challenges that i encountred 
-1. Issues Encountered:
-I initially had an error with my Flask API file:
+### 1. Flask API File Error
+
+I initially encountered this error with my Flask API file:
+
+```
 Traceback (most recent call last):
   File "/Users/mateenahjahan/Documents/api_assignment/flask_api.py", line 1, in <module>
     flask_api.py
     ^^^^^^^^^
 NameError: name 'flask_api' is not defined
-The issue was caused by the filename being accidentally included in the file itself. I fixed this by creating a new file with the correct content.
+```
 
-2. POST Request to Create a New Post:
+**Issue:** The filename was accidentally included in the file itself.
+**Solution:** Created a new file with the correct content.
 
-URL: http://127.0.0.1:5000/posts
-Method: POST
-Headers: Content-Type: application/json
-Body:
+### 2. POST Request Error
 
-json{
-  "title": "New Test Post",
-  "body": "This is a test post created via HTTP request",
-  "userId": 2
-}
-Initial Error:
+When attempting to create a new post:
+
+- **URL:** http://127.0.0.1:5000/posts
+- **Method:** POST
+- **Headers:** Content-Type: application/json
+- **Body:**
+  ```json
+  {
+    "title": "New Test Post",
+    "body": "This is a test post created via HTTP request",
+    "userId": 2
+  }
+  ```
+
+I received this error:
+```
 415 UNSUPPORTED MEDIA TYPE
 Did not attempt to load JSON data because the request Content-Type was not application/json
-This error occurred because I didn't properly set the Content-Type header in Postman. After adding the Content-Type header with value "application/json", the request succeeded.
+```
 
+**Issue:** Content-Type header was missing in Postman.
+**Solution:** Added the Content-Type header with value "application/json".
 
+## Next Steps
 
+I'll continue implementing these concepts tomorrow and explore more advanced API testing scenarios.
